# QCHALLenge-FW

./: .gitignore  NOTICE.txt  README.md  __init__.py  installer.py  pyproject.toml  qchallenge_framework.py
abstract/data/: abstract_data.py
abstract/evaluation/: abstract_evaluation.py
acl/: __init__.py  requirements.txt
acl/data/: acl_data.py  (+2 more)
examples/: acl_example_cplex.py  acl_example_gurobi.py  bootstrap.py  lb_example_dwave_cqm.py  lb_example_dwave_qubo.py  lb_example_gurobi_cqm.py  lb_example_gurobi_qubo.py  mpl_example_cqm_nowait_nooverlap.py  mpl_example_cqm_nowait_overlap.py  mpl_example_gurobi_nowait_nooverlap.py  mpl_example_gurobi_nowait_nooverlap_reduced.py  mpl_example_gurobi_nowait_overlap.py  mpl_example_gurobi_nowait_overlap_reduced.py  mpl_example_gurobi_wait_overlap.py  pas_example_cplex.py  pas_example_gurobi.py  pas_example_gurobi_convex.py  pas_example_qubo.py  pas_example_qubo_decomposition.py  sp_example_cplex.py  sp_example_gurobi.py  sp_example_heuristic.py  sp_example_qaoa_binary.py  sp_example_qaoansatz.py  sp_example_qubo_binary.py  sp_example_qubo_onehot.py  tl_example_gurobi.py  tr_example.py
framework/: create_init.py  create_venv.py  framework_config.json  init.py  tkinker_ui.py  utils.py
lb/: __init__.py  requirements.txt
mpl/: __init__.py  requirements.txt
pas/: __init__.py  requirements.txt
sp/: README.md  __init__.py  requirements.txt
tl/: __init__.py  requirements.txt
tr/: __init__.py  requirements.txt
transformations/: __init__.py  from_bqm.py  from_cplex.py  from_cqm.py  from_gurobi.py  from_lp.py  from_qp.py
(+776 files in other folders)
